# comp_club_handler

./: .gitignore  CMakeLists.txt  README.md
include/: ClockTime.h  ClubManager.h
src/: ClockTime.cpp  ClubManager.cpp  main.cpp
test/: CMakeLists.txt  test_clocktime.cpp  test_clubmanager.cpp
